# invest_insight

./: .gitignore  LICENSE  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_website.py
.devcontainer/: devcontainer.json
finance_app/: admin.py  models.py  tests.py  urls.py  views.py
finance_app/migrations/: 0001_initial.py
finance_app/templates/finance_app/: base.html  commodities.html  fd_and_rd.html  fd_page.html  home.html  rd_calculator.html  rd_page.html  real_estate.html  sip_calculator.html
investing/: asgi.py  settings.py  urls.py  wsgi.py
